Cleanup layout (non-functional)

--- a/install_resources/asound.conf
+++ b/install_resources/asound.conf
@@ -1,22 +1,30 @@
-#############################################################################
+#######################################################################################
 # Physical sound card (DigiAMP)
 #	- Direct access to the sound card, no extra software processing
 #	- Inputs like sample rate, format, and channels must match the hardware
-#############################################################################
+#######################################################################################
 pcm.oradio_snd_card {
 	type hw
 	card "DigiAMP"
 	device 0
 }
 
-#############################################################################
+#######################################################################################
+# Hardware Control Interface
+#######################################################################################
+ctl.!default {
+	type hw
+	card "DigiAMP"
+}
+
+#######################################################################################
 # Mixer allows multiple ALSA applications to play simultaneously
 #	- Fully software-based mixing
 #	- ipc_key + ipc_perm = shared memory used to combine audio streams
+#	- Output standarized at 48 kHz, 24 bits compromise between amount 
+#	  of CPU and high sound quality
 #	- bindings = maps software channels to hardware channels
-#       - Output standarized at 48 kHz, 24 bits compromise between amount 
-#         of CPU and high sound quality
-#############################################################################
+#######################################################################################
 pcm.dmixer {
 	type dmix
 	ipc_key 1024
@@ -24,8 +32,7 @@ pcm.dmixer {
 	slave {
 		pcm "oradio_snd_card"
 		rate 48000
-	#	format S32_LE
-		format S24_LE   
+		format S24_LE
 		channels 2
 		period_time 0
 		period_size 2048
@@ -38,162 +45,141 @@ pcm.dmixer {
 	}
 }
 
-#############################################################################
+#######################################################################################
 # Converts sample rate, format, and channel layout to match the slave
-#############################################################################
+#######################################################################################
 pcm.dmixer_in {
 	type plug
 	slave.pcm "dmixer"
 }
 
-#############################################################################
+#######################################################################################
 # Default PCM (for tools that open "default")
-#############################################################################
+#######################################################################################
 pcm.!default {
 	type plug
 	slave.pcm "dmixer_in"
 }
 
-#############################################################################
-# Hardware Control Interface
-#############################################################################
-ctl.!default {
-    type hw
-    card "DigiAMP"
-}
-
-#############################################################################
+#######################################################################################
 # MPD Chain: Separate volume and equalizer for MPD input
-# MPD_in -> caps_eq_mpd -> SoftVolMPD -> dmixer_in -> dmix
-#############################################################################
+# MPD -> equalizer -> volume control -> mixer -> HW
+#######################################################################################
 
-#############################################################################
+#######################################################################################
 # SoftVolMPD provides a dedicated software volume control for MPD input
 #	- Allows MPD playback volume adjustment independently of system master
 #	- Works entirely in software
-#############################################################################
+#	- Not needed to limit (min_dB / max_dB / resolution 256)
+#######################################################################################
 pcm.SoftVolMPD {
 	type softvol
 	slave.pcm "dmixer_in"
 	control {
 		name "VolumeMPD"
 		card "DigiAMP"
-        }
-# Not needed to limit:
-#		min_dB -50.0
-#		max_dB -6.0
-#		resolution 256
+	}
 }
 
-#############################################################################
+#######################################################################################
 # Converts sample rate, format, and channel layout to softvol requirements
-#############################################################################
+#######################################################################################
 pcm.mpd_equal_out_plug {
-    type plug
-    slave {
-         pcm "SoftVolMPD"
-         format S24_LE
-         rate 48000
-         channels 2
-    }
+	type plug
+	slave {
+		pcm "SoftVolMPD"
+		format S24_LE
+		rate 48000
+		channels 2
+	}
 }
 
-#############################################################################
-# MPD equal, the Spotify channel has simular structure
+#######################################################################################
+# MPD equalizer, the Spotify channel has simular structure.
 # EqFA4p is a 4-band parametric equalizer from the CAPS LADSPA plugin set
 # Note: Automatically converts to FLOAT_LE for LADSPA
 # Each band lets you:
-# There are 4 of four numbers (Enable/Disable, Frequency, Bandwidth, Gain). The final number is overall gain.
 # - Enable/disable:	1/0
 # - Frequency:		20 - 14000 Hz (Center Frequency)
 # - Bandwidth:		0.12 - 8 (Q factor) must have leading 0 if < 1
 # - Gain:			-24 - 24 dB
-# - Master Gain		-24 - 24 dB
+# - Master Gain:	-24 - 24 dB
 #
 # EqFA4p has 4 identical bands, applied in series:
 # Band	Controls	Purpose
-# Band 1	<act>  <freq_Hz>  <bw>  <gain_dB>       Low-mid shaping
+# Band 1	<act>  <freq_Hz>  <bw>  <gain_dB>	Low-mid shaping
 # Band 2	<act>  <freq_Hz>  <bw>  <gain_dB>	Cleanup / body
 # Band 3	<act>  <freq_Hz>  <bw>  <gain_dB>	Presence
-# Band 4	<act>  <freq_Hz>  <bw>  <gain_dB>Q	Not used
+# Band 4	<act>  <freq_Hz>  <bw>  <gain_dB>	Not used
 # Gain - master: to prevent clipping, reduced to max Gain + 2 dB
-
+#######################################################################################
 pcm.caps_eq_mpd {
-    type ladspa
-    slave.pcm "mpd_equal_out_plug"
-    path "/usr/lib/ladspa"
-
-    plugins [
-        {
-            label EqFA4p
-            input {
-                controls [
-                    1   60     0.9    10.0    
-                    1   88     0.35   -3.0    
-                    1   1000   1.0    2.0    
-                    0   8000   1.0    0.0    
-                    -8.0                 
-                ]
-            }
-        }
-    ]
+	type ladspa
+	slave.pcm "mpd_equal_out_plug"
+	path "/usr/lib/ladspa"	# location where to find the plugin
+	plugins [
+		{
+			label EqFA4p
+			input {
+				controls [
+					1     60   0.9    10.0
+					1     88   0.35   -3.0
+					1   1000   1.0     2.0
+					0   8000   1.0     0.0
+					-8.0
+				]
+			}
+		}
+	]
 }
 
-
-
-
-#############################################################################
+#######################################################################################
 # Input PCM exposed to MPD
-#############################################################################
+#######################################################################################
 pcm.MPD_in {
 	type plug
 	slave.pcm "caps_eq_mpd"
 }
 
-#############################################################################
+#######################################################################################
 # MPD Volume Control Interface
-#############################################################################
+#######################################################################################
 ctl.SoftVolMPD {
-   type softvol
-   card "DigiAMP"
+	type softvol
+	card "DigiAMP"
 }
 
-#############################################################################
+#######################################################################################
 # Spotify Chain: Separate volume and equalizer for Spotify input
-# Spotify_in -> caps_eq_spotify -> SoftVolSpotCon1 -> SoftVolSpotCon2 -> dmixer_in -> dmix
-#############################################################################
+# Spotify -> equalizer -> mute control -> volume control -> mixer -> HW
+#######################################################################################
 
-#############################################################################
+#######################################################################################
 # SoftVolSpotify provides a dedicated software volume control for Spotify input
 #	- Allows Spotify playback volume adjustment independently of system master
 #	- Works entirely in software
-#############################################################################
+#	- Not needed to limit (min_dB / max_dB / resolution 256)
+#######################################################################################
 pcm.SoftVolSpotCon2 {
 	type softvol
 	slave.pcm "dmixer_in"
 	control {
 		name "VolumeSpotCon2"
 		card "DigiAMP"
-        }        
-#  Not needed to limit: 
-#		min_dB -50.0
-#		max_dB -6.0
-#		resolution 256
+	}
 }
 
-#############################################################################
+#######################################################################################
 # Spotify Volume Control Interface
-#############################################################################
+#######################################################################################
 ctl.SoftVolSpotCon2 {
-   type softvol
-   card "DigiAMP"
+	type softvol
+	card "DigiAMP"
 }
 
-#############################################################################
-# SoftVolSpotify provides a dedicated software volume control for Spotify input
-#	- Allows Spotify playback volume adjustment independently of system master
-#	- Works entirely in software
-#############################################################################
+#######################################################################################
+# SoftVolSpotify provides a dedicated MUTE control for Spotify input
+#######################################################################################
 pcm.SoftVolSpotCon1 {
 	type softvol
 	slave.pcm "SoftVolSpotCon2"
@@ -203,91 +189,89 @@ pcm.SoftVolSpotCon1 {
 	}
 }
 
-#############################################################################
+#######################################################################################
 # Spotify Volume Control Interface
-#############################################################################
+#######################################################################################
 ctl.SoftVolSpotCon1 {
-   type softvol
-   card "DigiAMP"
+	type softvol
+	card "DigiAMP"
 }
 
-#############################################################################
+#######################################################################################
 # Converts sample rate, format, and channel layout to softvol requirements
-#############################################################################
+#######################################################################################
 pcm.spotcon_equal_out_plug {
-    type plug
-    slave {
-         pcm "SoftVolSpotCon1"
-         format S24_LE
-         rate 48000
-         channels 2
-    }
+	type plug
+	slave {
+		pcm "SoftVolSpotCon1"
+		format S24_LE
+		rate 48000
+		channels 2
+	}
 }
 
-#############################################################################
-# Spotify  equal, see MPD equal for details, is 1 to 1 copy
-
+#######################################################################################
+# Spotify equalizer, see MPD equalizer for details, is 1 to 1 copy
+#######################################################################################
 pcm.caps_eq_spotify {
 	type ladspa
-    slave.pcm "spotcon_equal_out_plug"
+	slave.pcm "spotcon_equal_out_plug"
 	path "/usr/lib/ladspa"	# location where to find the plugin
-    plugins [
-        {
-            label EqFA4p
-            input {
-                controls [
-                    1   60     0.9    10.0
-                    1   88     0.35   -3.0
-                    1   1000   1.0    2.0
-                    0   8000   1.0    0.0
-                    -8.0
-                ]
-            }
-        }
-    ]
+	plugins [
+		{
+			label EqFA4p
+			input {
+				controls [
+					1     60   0.9    10.0
+					1     88   0.35   -3.0
+					1   1000   1.0     2.0
+					0   8000   1.0     0.0
+					-8.0
+				]
+			}
+		}
+	]
 }
 
-#############################################################################
+#######################################################################################
 # Input PCM exposed to Spotify (Librespot)
-#############################################################################
+#######################################################################################
 pcm.SpotCon_in {
 	type plug
 	slave.pcm "caps_eq_spotify"
 }
 
-#############################################################################
+#######################################################################################
 # System Sounds Chain: Separate volume for sytem sounds input
-# SysSound_in -> SoftVolSysSound -> dmixer_in -> dmix
-#############################################################################
+# System Sound -> volume control -> mixer -> HW
+########################################################################################
 
-#############################################################################
+#######################################################################################
 # SoftVolSysSound provides a dedicated software volume control for system sound input
 #	- Allows system sound playback volume adjustment independently of system master
 #	- Works entirely in software
-#############################################################################
+#	- Not needed to limit (min_dB / max_dB / resolution 256)
+#######################################################################################
 pcm.SoftVolSysSound {
 	type softvol
 	slave.pcm "dmixer_in"
 	control {
 		name "VolumeSysSound"
 		card "DigiAMP"
-# Optional: makes volume control more accurate and safe
-#		min_dB -50.0
-#		max_dB 0.0
-#		resolution 256
 	}
 }
 
-#############################################################################
+#######################################################################################
 # System Sound Volume Control Interface
-#############################################################################
+#######################################################################################
 ctl.SoftVolSysSound {
-   type softvol
-   card "DigiAMP"
+	type softvol
+	card "DigiAMP"
 }
-#############################################################################
+
+#######################################################################################
 # Input PCM exposed to SysSound
-#############################################################################
+#######################################################################################
 pcm.SysSound_in {
 	type plug
 	slave.pcm "SoftVolSysSound"
