--- a/.github/workflows/python-lint-and-deprecated.yml
+++ b/.github/workflows/python-lint-and-deprecated.yml
@@ -48,12 +48,12 @@ jobs:
 
         # Run pylint - outputs issues or success
         echo "### 🧹 Pylint analysis results" >> "$RESULT_FILE"
-        pylint Python/*.py --rcfile=.github/workflows/.pylintrc --output-format=text >> "$RESULT_FILE"
+        pylint Main/*.py --rcfile=.github/workflows/.pylintrc --output-format=text >> "$RESULT_FILE"
         count_pylint=$(tr -d '\r' < "$RESULT_FILE" | grep -Ec '^[^:]+:[0-9]+:[0-9]+: [A-Z][0-9]{4}:')
 
         # Static deprecation check
         echo "### 🧹 Ruff static deprecation analysis results" >> "$RESULT_FILE"
-        ruff check Python --select F,D,ERA --extend-ignore D203,D213 | grep -i 'deprecated' >> "$RESULT_FILE"
+        ruff check Main --select F,D,ERA --extend-ignore D203,D213 | grep -i 'deprecated' >> "$RESULT_FILE"
         count_ruff=$(grep -i 'deprecated' "$RESULT_FILE" | wc -l | tr -d ' ')
 
         # Also capture success
