--- a/.github/workflows/python-lint-and-deprecated.yml
+++ b/.github/workflows/python-lint-and-deprecated.yml
@@ -37,7 +37,7 @@ jobs:
         source ~/.venv/bin/activate
 
         # Set PYTHONPATH
-        export PYTHONPATH="$GITHUB_WORKSPACE/Main:$GITHUB_WORKSPACE/.github/workflows:$GITHUB_WORKSPACE/module_test"
+        export PYTHONPATH="$GITHUB_WORKSPACE/Main:$GITHUB_WORKSPACE/.github/workflows"
 
         python -m pip install --upgrade pip
         pip install -r .github/workflows/oradio_modules.txt
