--- a/.github/workflows/python-lint-and-deprecated.yml
+++ b/.github/workflows/python-lint-and-deprecated.yml
@@ -35,13 +35,13 @@ jobs:
         # Set up Python virtual environment
         python3 -m venv --system-site-packages ~/.venv
         source ~/.venv/bin/activate
-
+        echo "step1"
         # Set PYTHONPATH
         export PYTHONPATH="$GITHUB_WORKSPACE/Main:$GITHUB_WORKSPACE/.github/workflows"
 
         python -m pip install --upgrade pip
         pip install -r .github/workflows/oradio_modules.txt
-
+        echo "step2"
         # Initialize output file
         RESULT_FILE=lint_deprecated_result.txt
         : > "$RESULT_FILE"
@@ -50,7 +50,7 @@ jobs:
         echo "### 🧹 Pylint analysis results" >> "$RESULT_FILE"
         pylint Main/**/*.py --rcfile=.github/workflows/.pylintrc --output-format=text >> "$RESULT_FILE"
         count_pylint=$(tr -d '\r' < "$RESULT_FILE" | grep -Ec '^[^:]+:[0-9]+:[0-9]+: [A-Z][0-9]{4}:')
-
+        echo "step3"
         # Static deprecation check
         echo "### 🧹 Ruff static deprecation analysis results" >> "$RESULT_FILE"
         ruff check Main --select F,D,ERA --extend-ignore D203,D213 | grep -i 'deprecated' >> "$RESULT_FILE"
