--- a/.github/workflows/python-lint-and-deprecated.yml
+++ b/.github/workflows/python-lint-and-deprecated.yml
@@ -55,20 +55,20 @@ jobs:
         echo "### 🧹 Ruff static deprecation analysis results" >> "$RESULT_FILE"
         ruff check Main --select F,D,ERA --extend-ignore D203,D213 | grep -i 'deprecated' >> "$RESULT_FILE"
         count_ruff=$(grep -i 'deprecated' "$RESULT_FILE" | wc -l | tr -d ' ')
-
+        echo "step4"
         # Also capture success
         if [ "$count_ruff" -eq 0 ]; then
             echo "Static deprecation check did not discover any warnings." >> "$RESULT_FILE"
             echo >> "$RESULT_FILE"
         fi
-
+        echo "step5"
         # Runtime deprecation check
         echo "### 🧹 Runtime deprecation analysis results " >> "$RESULT_FILE"
         #python3 .github/workflows/deprecation_check.py >> "$RESULT_FILE"
         #count_runtime=$(grep 'DEPRECATION:' "$RESULT_FILE" | wc -l | tr -d ' ')
         echo "Runtime deprecation analysis disabled until after GPIO rework is added " >> "$RESULT_FILE"
         count_runtime=0
-
+        echo "step6"
         # Also capture success
         if [ "$count_runtime" -eq 0 ]; then
             echo "Runtime deprecation check did not discover any warnings." >> "$RESULT_FILE"
@@ -77,10 +77,10 @@ jobs:
         # Determine emoji + color
         pylint_emoji=$([ "$count_pylint" -eq 0 ] && echo "✅" || echo "❌")
         pylint_color=$([ "$count_pylint" -eq 0 ] && echo "green" || echo "red")
-
+        echo "step7"
         ruff_emoji=$([ "$count_ruff" -eq 0 ] && echo "✅" || echo "⚠️")
         ruff_color=$([ "$count_ruff" -eq 0 ] && echo "green" || echo "orange")
-
+        echo "step8"
         runtime_emoji=$([ "$count_runtime" -eq 0 ] && echo "✅" || echo "⚠️")
         runtime_color=$([ "$count_runtime" -eq 0 ] && echo "green" || echo "orange")
 
