--- a/.github/workflows/python-lint-and-deprecated.yml
+++ b/.github/workflows/python-lint-and-deprecated.yml
@@ -36,7 +36,7 @@ jobs:
         python3 -m venv --system-site-packages ~/.venv
         source ~/.venv/bin/activate
         # Set PYTHONPATH
-        export PYTHONPATH="$GITHUB_WORKSPACE/Main:$GITHUB_WORKSPACE/Main/module_test:$GITHUB_WORKSPACE/.github/workflows"
+        export PYTHONPATH="$GITHUB_WORKSPACE:$GITHUB_WORKSPACE/Main:$GITHUB_WORKSPACE/Main/module_test:$GITHUB_WORKSPACE/.github/workflows"
 
         python -m pip install --upgrade pip
         pip install -r .github/workflows/oradio_modules.txt
